[package]
name = "tcs-client"
version = "0.1.1-rc.1"
authors = ["huangjj27 <huangjj.27@qq.com>"]
edition = "2018"
license = "MIT"
repository = "https://gitlab.com/huangjj27/tls_sig_api"
description = "Tencent Login Service Signature API (aka. TLSSigAPI)"

include = [
    "**/*.rs",
    "Cargo.toml",
]

[badges]
gitlab = { repository = "https://gitlab.com/huangjj27/tls_sig_api", branch = "prod" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.10"
ring = "0.13.5"
serde = { version = "1.0.97", features = ["derive"] }
serde_json = { version = "1.0.40", features = ["preserve_order"] }
deflate =  "0.8"
chrono =  "0.4"
log = "0.4"
reqwest = "0.9.22"

[dev-dependencies]
env_logger = "0.6"
dotenv = "0.14"
rand = "0.7"
